--- a/miniprogram/pages/alterSettings/alterSettings.json
+++ b/miniprogram/pages/alterSettings/alterSettings.json
@@ -1,3 +1,11 @@
 {
-  "usingComponents": {}
+  "usingComponents": {
+    "mp-form-page": "/miniprogram_npm/weui-miniprogram/form-page/form-page",
+    "mp-form": "/miniprogram_npm/weui-miniprogram/form/form",
+    "mp-checkbox-group": "/miniprogram_npm/weui-miniprogram/checkbox-group/checkbox-group",
+    "mp-checkbox": "/miniprogram_npm/weui-miniprogram/checkbox/checkbox",
+    "mp-cell": "/miniprogram_npm/weui-miniprogram/cell/cell",
+    "mp-cells": "/miniprogram_npm/weui-miniprogram/cells/cells",
+    "mp-toptips": "/miniprogram_npm/weui-miniprogram/toptips/toptips"
+  }
 }
