--- a/cloudfunctions/get_my_laundries/package.json
+++ b/cloudfunctions/get_my_laundries/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "callback",
+  "name": "get_my_laundries",
   "version": "1.0.0",
-  "description": "",
+  "description": "Get a user's all laundries.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
