--- a/cloudfunctions/use_machine/package.json
+++ b/cloudfunctions/use_machine/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "echo",
+  "name": "use_machine",
   "version": "1.0.0",
-  "description": "",
+  "description": "Register, check or update machine usage.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
